--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.scss
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.scss
@@ -1,19 +1,28 @@
 .filter-user-group {
-    border: 1px solid #ddd;
-    width: 200px;
-  }
-  
-  .import-export-bar {
-    background-color: #3e3e3e;
-    color: #fff
-  }
-  
-  .mat-checkbox-all.mat-checkbox.mat-accent {
-    .mat-checkbox-layout {
-      .mat-checkbox-inner-container {
-        .mat-checkbox-background {
-          background-color: #cacaca !important;
-        }
+  border: 1px solid #ddd;
+  width: 200px;
+}
+
+.import-export-bar {
+  background-color: #3e3e3e;
+  color: #fff
+}
+
+.mat-checkbox-all.mat-checkbox.mat-accent {
+  .mat-checkbox-layout {
+    .mat-checkbox-inner-container {
+      .mat-checkbox-background {
+        background-color: #cacaca !important;
       }
     }
   }
+}
+
+.opsi-type {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 3px 8px;
+  background-color: #eee;
+  font-weight: 600;
+}
