--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Retailer Detail'">
+  <page-content-header [contentTitle]="'Retailer Detail'" *ngIf="!formOnly">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
