CDE-3236-csc-new-menu-customer-care-ayo-src-dynamic-questions-in-principal: - fix failed build onLoad property

--- a/src/app/pages/customer-care/pertanyaan-verifikasi-agent/pertanyaan-verifikasi-agent.component.html
+++ b/src/app/pages/customer-care/pertanyaan-verifikasi-agent/pertanyaan-verifikasi-agent.component.html
@@ -6,7 +6,7 @@
   </page-content-header>
   <!-- / HEADER -->
 
-  <div class="content p-24" *ngIf="!onLoad">
+  <div class="content p-24">
     <div class="table-wrapper">
       
       <!-- SEARCH -->
