fixing some column not show value in list audience coin adjustment approval

--- a/src/app/pages/dte/coin-adjustment-approval/detail/coin-adjustment-approval-detail.component.html
+++ b/src/app/pages/dte/coin-adjustment-approval/detail/coin-adjustment-approval-detail.component.html
@@ -171,10 +171,11 @@
             <ngx-datatable-column name="Area" prop="area_code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Region" prop="region_code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Division" prop="division_code" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Jumlah Total Coin" prop="total_coin" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Jumlah Coin Group Trade Program" prop="total_coin_group_trade_program"
+            <ngx-datatable-column name="Jumlah Total Coin" prop="jml_total_coin" [sortable]="false">
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Jumlah Coin Group Trade Program" prop="jml_coin_group_trade_program"
               [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="Jumlah Adjustment Coin" prop="total_coin_adjustment" [sortable]="false">
+            <ngx-datatable-column name="Jumlah Adjustment Coin" prop="jml_adjustment_coin" [sortable]="false">
             </ngx-datatable-column>
           </ngx-datatable>
         </div>
