--- a/src/app/pages/customer-care/pertanyaan-verifikasi-agent/pertanyaan-verifikasi-agent.component.html
+++ b/src/app/pages/customer-care/pertanyaan-verifikasi-agent/pertanyaan-verifikasi-agent.component.html
@@ -12,11 +12,16 @@
       <!-- SEARCH -->
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
         <h2 class="pl-8">Daftar Pertanyaan Verifikasi Agent</h2>
-        <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
-          <mat-icon>search</mat-icon>
-          <mat-form-field class="is-light tab-search">
-            <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
-          </mat-form-field>
+        <div fxLayout="column">
+
+          <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+            <mat-icon>search</mat-icon>
+            <mat-form-field class="is-light tab-search">
+              <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+            </mat-form-field>
+          </div>
+          <label for="" style="color: grey; font-size: smaller;">Nama Pemilik Toko/Nama Toko/Kode Toko/Nomor Ponsel</label>
+
         </div>
       </div> <!--/ SEARCH -->
 
