--- a/src/app/pages/user-management/private-label/panel-mitra/dialog-import/import-panel-mitra-dialog.component.html
+++ b/src/app/pages/user-management/private-label/panel-mitra/dialog-import/import-panel-mitra-dialog.component.html
@@ -35,6 +35,7 @@
           <tr>
             <th nowrap>Code</th>
             <th nowrap>Name</th>
+            <th nowrap>Hub</th>
           </tr>
         </thead>
         <tbody>
@@ -44,6 +45,9 @@
             </td>
             <td nowrap>
               {{ item.name }}
+            </td>
+            <td nowrap>
+              {{ item.is_hub ? 'Yes' : 'No' }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
